--- a/DaPengTi2/en.lproj/MainStoryboard.storyboard
+++ b/DaPengTi2/en.lproj/MainStoryboard.storyboard
@@ -1,32 +1,110 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2166" systemVersion="11D50" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2166" systemVersion="11D50" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="e8n-yu-bKr">
     <dependencies>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1166"/>
     </dependencies>
     <scenes>
         <!--Da Peng Ti2 View Controller-->
-        <scene sceneID="4">
+        <scene sceneID="R3z-1J-Ncq">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
-                <viewController id="2" customClass="DaPengTi2ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5" customClass="PostView">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="00N-Dp-rVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="rMz-CU-r0L" customClass="DaPengTi2ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AGv-cr-wYs" customClass="PostView">
                         <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="bKl-so-TkV" customClass="PostView">
+                                <rect key="frame" x="16" y="55" width="732" height="949"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </scrollView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="tCh-5Y-EKM">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items/>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems/>
+                    <connections>
+                        <outlet property="postView" destination="bKl-so-TkV" id="3A3-ZY-DBl"/>
+                        <outlet property="toolbar" destination="tCh-5Y-EKM" id="hMf-EN-EPP"/>
+                    </connections>
                 </viewController>
             </objects>
+            <point key="canvasLocation" x="-71" y="-763"/>
+        </scene>
+        <!--Post Table View Controller - Root View Controller-->
+        <scene sceneID="fsB-Vw-cIN">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I55-NM-PjX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="aLk-bh-xk8" customClass="PostTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="nfR-1L-abl">
+                        <rect key="frame" x="0.0" y="64" width="320" height="788"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" id="oP3-oP-DDo" customClass="PostCell">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="aLk-bh-xk8" id="ZLu-Xa-nB5"/>
+                            <outlet property="delegate" destination="aLk-bh-xk8" id="J0d-J1-ZXh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Gtr-Ak-pqI">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="cpy-8G-Ny4">
+                            <connections>
+                                <action selector="updatePostsList:" destination="aLk-bh-xk8" id="xgW-tK-8Ol"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="463" y="-1700"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XgX-q7-ISi">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q5E-2X-VjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="2Gp-sb-rc3" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="wbc-yC-Gum">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1cU-Qa-VW8">
+                        <rect key="frame" x="0.0" y="960" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="aLk-bh-xk8" kind="relationship" relationship="rootViewController" id="MOT-hM-XP7"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-71" y="-1700"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="bpx-Rp-u3S">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vO5-RU-Jwa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <splitViewController id="e8n-yu-bKr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <connections>
+                        <segue destination="2Gp-sb-rc3" kind="relationship" relationship="masterViewController" id="SFp-cB-eAU"/>
+                        <segue destination="rMz-CU-r0L" kind="relationship" relationship="detailViewController" id="0Oq-az-Igs"/>
+                    </connections>
+                </splitViewController>
+            </objects>
+            <point key="canvasLocation" x="-1053" y="-1231"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="DaPengTi2ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DaPengTi2ViewController.h"/>
-        </class>
-        <class className="PostView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostView.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
